--- a/app-podinfo/podinfo-kustomization.yaml
+++ b/app-podinfo/podinfo-kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: podinfo
+  namespace: default
 spec:
   interval: 5m0s
   path: ./kustomize
