--- a/app-podinfo/podinfo-source.yaml
+++ b/app-podinfo/podinfo-source.yaml
@@ -3,6 +3,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: GitRepository
 metadata:
   name: podinfo
+  namespace: default
 spec:
   interval: 30s
   ref:
