--- a/app-podinfo/podinfo-kustomization.yaml
+++ b/app-podinfo/podinfo-kustomization.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
@@ -11,4 +10,4 @@ spec:
   sourceRef:
     kind: GitRepository
     name: podinfo
-
+  targetNamespace: default
